Added text file per requirements.

--- a/http-server/content/index.html
+++ b/http-server/content/index.html
@@ -7,7 +7,9 @@
 
 	<body>
 		<div id = "topblock">
-			<img id = "dog" src = "images/dog.jpg" alt="A picture of a dog.">
+			<a href="textfile.txt">
+				<img id = "dog" src = "images/dog.jpg" alt="A picture of a dog.">
+			</a>
 
 			<h1>Welcome to the site on the other end of this web server!</h1>
 
